plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.sample'
version = '0.0.1'

// Java 21 설정
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// bootJar 태스크 커스터마이징
bootJar {
    archiveFileName.set('app.jar')
}

// 기본 jar 태스크 비활성화
jar {
    enabled = false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// BOM 관리
dependencyManagement {
    imports {
        // Spring Cloud BOM (Boot 3.2.x 호환 버전)
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
        // AWS SDK BOM
        mavenBom "software.amazon.awssdk:bom:2.20.26"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // DB Drivers (RuntimeOnly)
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
    implementation "io.github.openfeign:feign-jackson"

    // WebSocket and STOMP
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // AWS S3 (버전 BOM 관리)
    implementation 'software.amazon.awssdk:s3'

    // Swagger (Boot 3.x 호환 버전으로 변경)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // password encoder
    implementation 'org.mindrot:jbcrypt:0.4'

    // JWT Token
    // auth0 java-jwt (Boot 3 호환을 위해 버전 업)
    implementation 'com.auth0:java-jwt:4.4.0'

    // jjwt (0.9.1은 Boot 3에서 호환되지 않으므로 최신 버전 구조로 변경)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // jaxb (javax -> jakarta 로 변경 필수)
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    runtimeOnly 'com.sun.xml.bind:jaxb-impl:4.0.0'

    // p6spy query logging
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    // Spring Boot Email (JavaMail)
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // sms
    implementation 'net.nurigo:sdk:4.2.7'

    // 트래픽 공격 대비
    implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.0.0'

//    이미지 처리 관련 webp 지원 라이브러리
    implementation 'com.twelvemonkeys.imageio:imageio-core:3.10.1'
    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.10.1'

}

tasks.named('test') {
    useJUnitPlatform()
}

task cleanGeneratedDir(type: Delete) {
    delete file('build/generated')
}